[tool.poetry]
name = "interval-sdk"
version = "0.1.0"
description = "Python SDK for Interval."
authors = ["Interval"]

[tool.poe.tasks]
demo = { script = 'demos:main' }
test = "pytest"
format = "black src/"
dump_schema = { script = 'interval_sdk.io_schema:dump_all_methods' }

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.1"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
aiodns = {version = "^3.0.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
poethepoet = "^0.13.1"
playwright = "^1.20.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
pytest-playwright = "^0.3.0"
aiodns = "^3.0.0"

[tool.pyright]
exclude = [
	"**/node_modules",
	"**/__pycache__",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
